# aula_08

./: README.md  etl.py  pipeline.py  pyproject.toml  schema.py
